# probate-app

./: .devcontainer.json  .gitignore  .mise.toml  README.md  docker-compose.dev.yml  package.json  pyproject.toml  tsconfig.base.json  turbo.json
apps/admin-web/: package.json  tsconfig.json
apps/admin-web/app/: page.tsx
apps/applicant-mobile/: app.json  package.json  tsconfig.json
apps/applicant-mobile/app/: index.tsx
docs/: implementation-plan.md
scripts/: devpod-setup.sh  generate-types.sh  postCreate.sh  postStart.sh  reset-db.sh  start.sh  stop.sh
services/api/: Dockerfile  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_initial.py
services/api/app/: main.py
services/api/app/core/: config.py  database.py
